external: Add m2c dep.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external/splat"]
 	path = external/splat
 	url = https://github.com/ethteck/splat
+[submodule "external/m2c"]
+	path = external/m2c
+	url = https://github.com/cakehonolulu/m2c
