--- a/src/bullseye/Makefile
+++ b/src/bullseye/Makefile
@@ -1,16 +1,34 @@
 EE_BIN = bullseye.elf
-EE_OBJS = entry.o
-EE_LIBS = -ldebug -lc -nostartfiles -e entry
 
-EE_OPTFLAGS = -O0
-EE_WARNFLAGS = -Werror
-EE_CXXFLAGS = -g3 -gdwarf-4 -gstrict-dwarf -Iinclude -Wno-strict-aliasing
-EE_CFLAGS += -Iinclude
+EE_OBJS = entry.o
+EE_CFLAGS += -fdata-sections -ffunction-sections -Iinclude -g3 -gdwarf-4 -gstrict-dwarf -Iinclude -Wno-strict-aliasing
+EE_LDFLAGS += -Wl,--gc-sections
+EE_LIBS += -ldebug -lc
+
+ifeq ($(DUMMY_TIMEZONE), 1)
+   EE_CFLAGS += -DDUMMY_TIMEZONE
+endif
+
+ifeq ($(DUMMY_LIBC_INIT), 1)
+   EE_CFLAGS += -DDUMMY_LIBC_INIT
+endif
+
+ifeq ($(KERNEL_NOPATCH), 1)
+   EE_CFLAGS += -DKERNEL_NOPATCH
+endif
+
+ifeq ($(DEBUG), 1)
+  EE_CFLAGS += -DDEBUG -O0 -g
+else 
+  EE_CFLAGS += -Os
+  EE_LDFLAGS += -s
+endif
 
 all: $(EE_BIN)
 
 clean:
-	rm -f *.o
+	rm -rf $(EE_OBJS) $(EE_BIN)
 
+# Include makefiles
 include $(PS2SDK)/samples/Makefile.pref
-include $(PS2SDK)/samples/Makefile.eeglobal_cpp
+include $(PS2SDK)/samples/Makefile.eeglobal
